# disquant

./: README.md  pyproject.toml  requirements.txt
disquant/definitions/: business_day.py  conventions.py  curve.py  date.py  day_count.py  frequency.py  money.py  period.py  rate.py  schedule.py
disquant/instruments/: irs.py
disquant/utils/: interpolation.py
tests/definitions/: test_conventions.py  test_conventions_data.py  test_curve.py  test_date.py  test_money.py  test_period.py  test_rate.py  test_schedule.py
tests/instruments/: test_irs.py
